# ChangeLog for net-wireless/madwifi-tools
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/madwifi-tools/Attic/ChangeLog,v 1.14 2006/01/17 20:03:03 uberlord Exp $

  17 Jan 2006; Roy Marples <uberlord@gentoo.org>
  madwifi-tools-0.1401.20060117.ebuild:
  Marked ~amd64.

*madwifi-tools-0.1401.20060117 (17 Jan 2006)

  17 Jan 2006; Henrik Brix Andersen <brix@gentoo.org>
  +files/madwifi-tools-0.1401.20060117-udev.rules,
  +madwifi-tools-0.1401.20060117.ebuild:
  New snapshot, changed naming scheme to match upstream. Switched from using
  preup()/postdown() to using an udev helper, bug #118516.

  18 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org>
  madwifi-tools-0.1_pre20051111.ebuild:
  Marked -amd64 too, upstream ticket 74.

*madwifi-tools-0.1_pre20051111 (13 Nov 2005)

  13 Nov 2005; Stefan Schweizer <genstef@gentoo.org>
  -madwifi-tools-0.1_pre20050106.ebuild,
  -madwifi-tools-0.1_pre20050107.ebuild,
  -madwifi-tools-0.1_pre20051031.ebuild,
  +madwifi-tools-0.1_pre20051111.ebuild:
  Version bump, remove old ebuilds

  12 Nov 2005; Stefan Schweizer <genstef@gentoo.org>
  madwifi-tools-0.1_pre20051031.ebuild:
  Use userspecified LDFLAGS,CFLAGS, use make install

  12 Nov 2005; Peter Johanson <latexer@gentoo.org>
  madwifi-tools-0.1_pre20051031.ebuild:
  Fix problem with not installing new wlanconfig tool.

*madwifi-tools-0.1_pre20051031 (09 Nov 2005)

  09 Nov 2005; Peter Johanson <latexer@gentoo.org>
  +madwifi-tools-0.1_pre20051031.ebuild:
  Bump with new CVS snapshot.

  29 Apr 2005; <solar@gentoo.org> madwifi-tools-0.1_pre20050420.ebuild:
  - bug 90880 - fix sed expression on athstats.c

*madwifi-tools-0.1_pre20050420 (26 Apr 2005)

  26 Apr 2005; <solar@gentoo.org> +madwifi-tools-0.1_pre20050420.ebuild:
  - version bump

  19 Jan 2005; <solar@gentoo.org> madwifi-tools-0.1_pre20050106.ebuild,
  madwifi-tools-0.1_pre20050107.ebuild:
  - added a sed expression to a src_unpack as per bug #78586
