@@ -1,9 +1,12 @@
-MD5 20624b22389ad4ac632095df588c0482 ChangeLog 2830
+MD5 9c7efdbf143b3d19f51c25b6ce4c77ba ChangeLog 3039
 MD5 6225a58b69ebeb67ff97ab4026b21e58 files/digest-madwifi-tools-0.1401.20060117 78
+MD5 04ecb172d5d25d2995578d1772e2c239 files/digest-madwifi-tools-0.1420.20060201 78
 MD5 d4937e6f87128084a32ef792ddbccc6e files/digest-madwifi-tools-0.1_pre20050420 85
 MD5 91250d7eaa44ba70b4d71107fc259f8b files/digest-madwifi-tools-0.1_pre20051111 81
 MD5 3b977ab622651738d159d4559e670e25 files/madwifi-tools-0.1401.20060117-udev.rules 355
+MD5 3b977ab622651738d159d4559e670e25 files/madwifi-tools-0.1420.20060201-udev.rules 355
 MD5 407e3d84d5a80b1f584e80606bf5aa94 madwifi-tools-0.1401.20060117.ebuild 1705
+MD5 19d77ef39eb75455447f4c9fe4fcf6d2 madwifi-tools-0.1420.20060201.ebuild 1604
 MD5 b51ffccefc25227db9e0af7033042b3d madwifi-tools-0.1_pre20050420.ebuild 883
 MD5 62f10ec7d338f766f2d10c81ba37d640 madwifi-tools-0.1_pre20051111.ebuild 959
 MD5 19fd766bac8e110b4620363a1ace26dd metadata.xml 159
