@@ -1,0 +1,1 @@
+MD5 7aec9b28cc27519d5d58addc81bda290 madwifi-ng-r1420-20060201.tar.gz 3249497
