@@ -1,6 +1,13 @@
 # ChangeLog for net-wireless/madwifi-tools
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/madwifi-tools/Attic/ChangeLog,v 1.14 2006/01/17 20:03:03 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/madwifi-tools/Attic/ChangeLog,v 1.15 2006/02/01 14:03:27 brix Exp $
+
+*madwifi-tools-0.1420.20060201 (01 Feb 2006)
+
+  01 Feb 2006; Henrik Brix Andersen <brix@gentoo.org>
+  +files/madwifi-tools-0.1420.20060201-udev.rules,
+  +madwifi-tools-0.1420.20060201.ebuild:
+  New snapshot.
 
   17 Jan 2006; Roy Marples <uberlord@gentoo.org>
   madwifi-tools-0.1401.20060117.ebuild:
